Added check in apis
